--- a/p8105_hw1_td2749.md
+++ b/p8105_hw1_td2749.md
@@ -3,33 +3,54 @@ p8105_hw1_td2749
 Tvisha R. Devavarapu
 2022-09-19
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that
-includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
+Loading the required packages:
 
 ``` r
-summary(cars)
+library(tidyverse)
 ```
 
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
+    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
+    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
+    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
+    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
 
-## Including Plots
+``` r
+library(ggplot2)
+```
 
-You can also embed plots, for example:
+## Problem 1
 
-![](p8105_hw1_td2749_files/figure-gfm/pressure-1.png)<!-- -->
+``` r
+install.packages("palmerpenguins")
+```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to
-prevent printing of the R code that generated the plot.
+Loading the `penguins` dataset from the `palmerpenguins` package:
+
+``` r
+data("penguins", package = "palmerpenguins")
+```
+
+The given dataset consists of information regarding penguins from the
+years 2007-2009. It holds **344 rows and 8 columns**. The columns
+contain data pertaining to species, island, bill_length_mm,
+bill_depth_mm, flipper_length_mm, body_mass_g, sex, year. The mean
+flipper length recorded is 200.9152047 mm (millimeters).
+
+NOTE: 2 rows from the `penguin` dataframe with NA values in the
+flipperlength column were omitted to perform the mean calculation.
+
+``` r
+# Make a scatterplot of flipper_length_mm (y) vs bill_length_mm (x); color points using the species variable 
+
+ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_td2749_files/figure-gfm/P1_scatterplot-1.png)<!-- -->
+
+`r`
