--- a/p8105_hw1_td2749.md
+++ b/p8105_hw1_td2749.md
@@ -53,4 +53,12 @@ ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)
 
 ![](p8105_hw1_td2749_files/figure-gfm/P1_scatterplot-1.png)<!-- -->
 
+``` r
+ggsave('P1_scatterplot-1.png')
+```
+
+    ## Saving 7 x 5 in image
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
 `r`
