--- a/p8105_hw1_td2749.md
+++ b/p8105_hw1_td2749.md
@@ -7,18 +7,6 @@ Loading the required packages:
 
 ``` r
 library(tidyverse)
-```
-
-    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
-    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
-    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
-    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-    ## ✖ dplyr::filter() masks stats::filter()
-    ## ✖ dplyr::lag()    masks stats::lag()
-
-``` r
 library(ggplot2)
 ```
 
@@ -34,18 +22,20 @@ Loading the `penguins` dataset from the `palmerpenguins` package:
 data("penguins", package = "palmerpenguins")
 ```
 
+***Dataset Description***
+
 The given dataset consists of information regarding penguins from the
 years 2007-2009. It holds **344 rows and 8 columns**. The columns
 contain data pertaining to species, island, bill_length_mm,
 bill_depth_mm, flipper_length_mm, body_mass_g, sex, year. The mean
-flipper length recorded is 200.9152047 mm (millimeters).
+flipper length recorded is 200.92 mm (millimeters).
 
 NOTE: 2 rows from the `penguin` dataframe with NA values in the
 flipperlength column were omitted to perform the mean calculation.
 
-``` r
-# Make a scatterplot of flipper_length_mm (y) vs bill_length_mm (x); color points using the species variable 
+***Filpper Length Vs. Bill Length: Visualization Via Scatterplot***
 
+``` r
 ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)) + geom_point()
 ```
 
@@ -54,7 +44,7 @@ ggplot(penguins, aes(x = bill_length_mm, y = flipper_length_mm, color = species)
 ![](p8105_hw1_td2749_files/figure-gfm/P1_scatterplot-1.png)<!-- -->
 
 ``` r
-ggsave('P1_scatterplot-1.png')
+ggsave('bill_vs_flipper_scatter.png')
 ```
 
     ## Saving 7 x 5 in image
