--- a/p8105_hw1_td2749.md
+++ b/p8105_hw1_td2749.md
@@ -26,12 +26,17 @@ data("penguins", package = "palmerpenguins")
 
 The given dataset consists of information regarding penguins from the
 years 2007-2009. It holds **344 rows and 8 columns**. The columns
-contain data pertaining to species, island, bill_length_mm,
-bill_depth_mm, flipper_length_mm, body_mass_g, sex, year. The mean
-flipper length recorded is 200.92 mm (millimeters).
+contain data pertaining to *‘species, island, bill_length_mm,
+bill_depth_mm, flipper_length_mm, body_mass_g, sex, year’*. Recordings
+for bill length, bill depth, and flipper length are made in millimeters
+(mm). body_mass is recorded in grams (g). The species include *‘Adelie,
+Gentoo, Chinstrap’* from the *‘Torgersen, Biscoe, Dream’* islands. The
+mean flipper length recorded for the listed penguins is **200.92 mm**
+(millimeters).
 
 NOTE: 2 rows from the `penguin` dataframe with NA values in the
-flipperlength column were omitted to perform the mean calculation.
+`flipper_length_mm` column were omitted to perform the above mean
+calculation.
 
 ***Filpper Length Vs. Bill Length: Visualization Via Scatterplot***
 
