--- a/p8105_hw1_td2749.md
+++ b/p8105_hw1_td2749.md
@@ -3,7 +3,7 @@ p8105_hw1_td2749
 Tvisha R. Devavarapu
 2022-09-19
 
-Loading the required packages:
+**Loading the required packages:**
 
 ``` r
 library(tidyverse)
@@ -27,12 +27,12 @@ data("penguins", package = "palmerpenguins")
 The given dataset consists of information regarding penguins from the
 years 2007-2009. It holds **344 rows and 8 columns**. The columns
 contain data pertaining to *‘species, island, bill_length_mm,
-bill_depth_mm, flipper_length_mm, body_mass_g, sex, year’*. Recordings
-for bill length, bill depth, and flipper length are made in millimeters
-(mm). body_mass is recorded in grams (g). The species include *‘Adelie,
-Gentoo, Chinstrap’* from the *‘Torgersen, Biscoe, Dream’* islands. The
-mean flipper length recorded for the listed penguins is **200.92 mm**
-(millimeters).
+bill_depth_mm, flipper_length_mm, body_mass_g, sex, year’*. Data
+recordings for bill length, bill depth, and flipper length are made in
+millimeters (mm). body_mass is recorded in grams (g). The species
+include *‘Adelie, Gentoo, Chinstrap’* from the *‘Torgersen, Biscoe,
+Dream’* islands. The mean flipper length recorded for the listed
+penguins is **200.92 mm** (millimeters).
 
 NOTE: 2 rows from the `penguin` dataframe with NA values in the
 `flipper_length_mm` column were omitted to perform the above mean
@@ -56,4 +56,62 @@ ggsave('bill_vs_flipper_scatter.png')
 
     ## Warning: Removed 2 rows containing missing values (geom_point).
 
-`r`
+## Problem 2
+
+``` r
+df_2 = 
+  tibble(
+    norm_vec = rnorm(10),
+    log_vec = norm_vec > 0,
+    char_vec = c("I", "love", "listening", "to", "Seventeen", "NCT", "Treasure", "and", "BTS", "!"),
+    fac_vec = factor(c("NYC", "SD", "LA", "LA", "SD", "SD", "SD", "NYC", "NYC", "NYC"))
+  )
+```
+
+***Taking means of each variable***
+
+``` r
+#Mean of numerical values
+mean(pull(df_2, norm_vec))
+```
+
+    ## [1] 0.1770062
+
+``` r
+#Mean of logical values
+mean(pull(df_2, log_vec))
+```
+
+    ## [1] 0.8
+
+``` r
+#Mean of character values
+mean(pull(df_2, char_vec))
+```
+
+    ## Warning in mean.default(pull(df_2, char_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+``` r
+#Mean of vector values
+mean(pull(df_2, fac_vec))
+```
+
+    ## Warning in mean.default(pull(df_2, fac_vec)): argument is not numeric or
+    ## logical: returning NA
+
+    ## [1] NA
+
+Based on the above results, it is possible to take means of numeric and
+logical values but not of character or factor values due to their
+non-numeric/non-logical nature.
+
+``` r
+log_num = as.numeric(df_2$log_vec)
+char_num = as.numeric(df_2$char_vec)
+fac_num = as.numeric(df_2$fac_vec)
+```
+
+# Write a code chunk that applies the as.numeric function to the logical, character, and factor variables (please show this chunk but not the output). What happens, and why? Does this help explain what happens when you try to take the mean?
